# Task-Manager

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
.github/workflows/: test-coverage.yml
task_manager/: mixins.py  settings.py  urls.py
task_manager/labels/: forms.py  tests.py  urls.py  views.py
task_manager/labels/fixtures/: label.json
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  tests.py  urls.py  views.py
task_manager/statuses/fixtures/: statuses.json
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/fixtures/: task.json
task_manager/tasks/migrations/: 0001_initial.py  0002_task_labels.py
task_manager/templates/: create_form.html  delete_form.html  index.html  update_form.html
task_manager/templates/label/: create.html  delete.html  label_form.html  label_list.html  labels_list.html  update.html
task_manager/templates/status/: create.html  delete.html  status_form.html  status_list.html  update.html
task_manager/templates/task/: create.html  delete.html  filter.html  task_form.html  task_list.html  task_view.html  update.html
task_manager/templates/user/: add_user.html  create.html  delete.html  login.html  update.html  user_form.html  users_list.html
task_manager/user/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/user/fixtures/: users.json
task_manager/user/migrations/: 0001_initial.py  (+1 more)
